--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
    </div>
 
    <footer>
-       <div class="col-lg-12 footer">
+       <div class="col-sm-12 col-md-12 col-lg-12 footer">
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 col-md-12 col-lg-12">
@@ -672,7 +672,7 @@
                                </ul>
                            </div>
                        </div>
-                       <div class="col-sm-12 col-md-6 col-lg-3">
+                       <div class="col-sm-12 col-md-12 col-lg-3">
                            <div class="footer-title">
                                <span>Connect with us</span>
                            </div>
@@ -727,12 +727,16 @@
                </div>
            </div>
        </div>
-       <div class="col-lg-12 footer-bottom">
+       <div class="col-sm-12 col-md-12 col-lg-12 footer-bottom">
            <div>
                <span>iPhone in Canada Blog</span>
            </div>
        </div>
    </footer>
+
+   <script src="js/jquery.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/main.js"></script>
 
 </body>
 
