--- a/post.html
+++ b/post.html
@@ -305,10 +305,329 @@
                </div>
            </div>
        </div>
+       <div class="container">
+           <div class="col-sm-12 col-md-12 col-lg-12 comments-block-bottom">
+               <div class="comments-title">
+                   <h3>Write a comment</h3>
+               </div>
+               <div class="comment-form">
+                   <div class="col-sm-8 col-md-8 col-lg-10 col-lg-offset-1">
+                       <div class="col-sm-12 col-md-12 col-lg-6" style="padding-left: 0">
+                           <input type="text" placeholder="Your Name">
+                       </div>
+                       <div class="col-sm-12 col-md-12 col-lg-6" style="padding-right: 0">
+                           <input type="email" placeholder="Email">
+                       </div>
+                   </div>
+                   <div class="col-sm-8 col-md-8 col-lg-10 col-lg-offset-1">
+                       <textarea rows="6" placeholder="Comment"></textarea>
+                   </div>
+                   <div class="col-sm-2 col-md-2 col-lg-2 col-lg-offset-5">
+                       <button>PUBLISH</button>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="container">
+           <div class="col-sm-12 col-md-12 col-lg-12">
+               <div class="comments-title">
+                   <h3>More Posts</h3>
+               </div>
+               <div class="more-posts">
+                   <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                       <div>
+                           <p class="more-posts-text-top">
+                               <i class="fa fa-clock-o" aria-hidden="true"></i>
+                               <span class="text1">Gary NG</span> <span class="text2">Steve Vegvari</span>
+                           </p>
+                           <div class="trending-posts-block-img">
+                               <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="trending-posts-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                               <p>
+                                   All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                       <div>
+                           <p class="more-posts-text-top">
+                               <i class="fa fa-clock-o" aria-hidden="true"></i>
+                               <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                           </p>
+                           <div class="trending-posts-block-img">
+                               <img src="images/kate-hliznitsova-tD0wyPbnsLA-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="trending-posts-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                               <p>
+                                   All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                       <div>
+                           <p class="more-posts-text-top">
+                               <i class="fa fa-clock-o" aria-hidden="true"></i>
+                               <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                           </p>
+                           <div class="trending-posts-block-img">
+                               <img src="images/andrew-donovan-valdivia-mL3VKb7dpmQ-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="trending-posts-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                               <p>
+                                   All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+               <div class="more-posts">
+                   <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                       <div>
+                           <p class="more-posts-text-top">
+                               <i class="fa fa-clock-o" aria-hidden="true"></i>
+                               <span class="text1">Gary NG</span> <span class="text2">Steve Vegvari</span>
+                           </p>
+                           <div class="trending-posts-block-img">
+                               <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="trending-posts-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                               <p>
+                                   All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                       <div>
+                           <p class="more-posts-text-top">
+                               <i class="fa fa-clock-o" aria-hidden="true"></i>
+                               <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                           </p>
+                           <div class="trending-posts-block-img">
+                               <img src="images/stuart-davies-zAAyr_x8uxI-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="trending-posts-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                               <p>
+                                   All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern Ireland Apple Stores will reopen starting on June 15th.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4 more-posts-item">
+                       <div>
+                           <p class="more-posts-text-top">
+                               <i class="fa fa-clock-o" aria-hidden="true"></i>
+                               <span class="text1">1h ago</span> <span class="text2">Steve Vegvari</span>
+                           </p>
+                           <div class="trending-posts-block-img">
+                               <img src="images/jorgen-hendriksen-i3BGqO7m8k4-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="trending-posts-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                               <p>
+                                   All England and Northern Ireland Apple Stores will reopen starting on June 15th. All England and Northern.
+                               </p>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="container">
+           <div class="col-sm-12 col-md-12 col-lg-12">
+               <div class="comments-title">
+                   <h3>Sponsored</h3>
+               </div>
+               <div class="sponsored">
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/david-holifield-BmhgPWc3dKw-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/daniel-korpai-HyTwtsk8XqA-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/andrew-donovan-valdivia-mL3VKb7dpmQ-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <div class="sponsored">
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/pineapple-supply-co-qlYQb7B9vog-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/stuart-davies-zAAyr_x8uxI-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/david-holifield-BmhgPWc3dKw-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <div class="sponsored">
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/david-holifield-BmhgPWc3dKw-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/daniel-korpai-HyTwtsk8XqA-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/andrew-donovan-valdivia-mL3VKb7dpmQ-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <div class="sponsored">
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/pineapple-supply-co-qlYQb7B9vog-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/stuart-davies-zAAyr_x8uxI-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-sm-12 col-md-6 col-lg-4">
+                       <div>
+                           <div class="trending-posts-block-img">
+                               <img src="images/david-holifield-BmhgPWc3dKw-unsplash@2x.png" width="100%">
+                           </div>
+                           <div class="sponsored-block-text">
+                               <h4>A Number of UK Apple Stores Will Begin Reopening on June 15th</h4>
+                           </div>
+                           <p class="sponsored-text-bottom">
+                               <span class="text1">Learn It Wise</span>
+                               <span class="text2">Sponsored</span>
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
    </div>
 
    <footer>
-       <div class="col-lg-12 footer">
+       <div class="col-sm-12 col-md-12 col-lg-12 footer">
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 col-md-12 col-lg-12">
@@ -343,7 +662,7 @@
                                </ul>
                            </div>
                        </div>
-                       <div class="col-sm-12 col-md-6 col-lg-3">
+                       <div class="col-sm-12 col-md-12 col-lg-3">
                            <div class="footer-title">
                                <span>Connect with us</span>
                            </div>
@@ -398,7 +717,7 @@
                </div>
            </div>
        </div>
-       <div class="col-lg-12 footer-bottom">
+       <div class="col-sm-12 col-md-12 col-lg-12 footer-bottom">
            <div>
                <span>iPhone in Canada Blog</span>
            </div>
