--- a/post.html
+++ b/post.html
@@ -31,8 +31,8 @@
                            <div class="social-icons">
                                <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
                            </div>
-                           <div class="social-icons" style="background: #444444; border-radius: 20%; height: 26px;">
-                               <i class="fa fa-youtube-play fa-2x" style="color: white; padding: 0px 3px;" aria-hidden="true"></i>
+                           <div class="social-icons">
+                               <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                            </div>
                            <div class="social-icons">
                                <i class="fa fa-rss-square fa-2x" aria-hidden="true"></i>
@@ -42,20 +42,42 @@
                </div>
            </div>
        </div>
-       <div class="header">
+       <div class="header" style="position: relative">
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 col-md-12 col-lg-12">
-                       <div class="header-block">
+                       <div class="header-block" style="position: relative">
                            <div class="logo">
                                <img src="images/iic-logo-5000x1574.png" width="100px">
                            </div>
                            <div>
                                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                                   <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-                                       <!--<span class="navbar-toggler-icon"></span>-->
-                                   <!--</button>-->
                                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                       <ul class="navbar-nav mr-auto">
+                                           <li class="nav-item active">
+                                               <a class="nav-link" href="#">CATEGORIES</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">DEALS</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">AMAZON DEALS</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">SHOP APPLE.CA</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">SEARCH</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">SUBMIT TIPS</a>
+                                           </li>
+                                       </ul>
+                                   </div>
+                               </nav>
+                               <nav class="mobile-menu">
+                                   <button class="humburger-mobile"><i class="fa fa-bars fa-2x"></i></button>
+                                   <div class="navbar-collapse mobile" style="display: none;">
                                        <ul class="navbar-nav mr-auto">
                                            <li class="nav-item active">
                                                <a class="nav-link" href="#">CATEGORIES</a>
@@ -88,7 +110,7 @@
 
    <div class="col-sm-12 col-md-12 col-lg-12 main-block">
        <div class="container">
-           <div class="col-sm-12 col-md-6 col-lg-8 item-block">
+           <div class="col-sm-12 col-md-8 col-lg-8 item-block">
                <div class="item-block-title">
                    <h1>Tesla Model S Becomes First Electric Car with EPA-Rated 647 km Range</h1>
                </div>
@@ -146,7 +168,7 @@
                    </div>
                </div>
            </div>
-           <div class="col-sm-12 col-md-6 col-lg-4">
+           <div class="col-sm-12 col-md-4 col-lg-4">
                <div class="most-viewed-title">
                    <h2 style="color: #444444;">Most Viewed</h2>
                </div>
@@ -311,18 +333,18 @@
                    <h3>Write a comment</h3>
                </div>
                <div class="comment-form">
-                   <div class="col-sm-8 col-md-8 col-lg-10 col-lg-offset-1">
-                       <div class="col-sm-12 col-md-12 col-lg-6" style="padding-left: 0">
+                   <div class="col-sm-12 col-md-12 col-lg-10 col-lg-offset-1">
+                       <div class="col-sm-12 col-md-12 col-lg-6 comment-form-name">
                            <input type="text" placeholder="Your Name">
                        </div>
-                       <div class="col-sm-12 col-md-12 col-lg-6" style="padding-right: 0">
+                       <div class="col-sm-12 col-md-12 col-lg-6 comment-form-email">
                            <input type="email" placeholder="Email">
                        </div>
                    </div>
-                   <div class="col-sm-8 col-md-8 col-lg-10 col-lg-offset-1">
+                   <div class="col-sm-12 col-md-12 col-lg-10 col-lg-offset-1">
                        <textarea rows="6" placeholder="Comment"></textarea>
                    </div>
-                   <div class="col-sm-2 col-md-2 col-lg-2 col-lg-offset-5">
+                   <div class="col-sm-12 col-md-12 col-lg-2 col-lg-offset-5">
                        <button>PUBLISH</button>
                    </div>
                </div>
@@ -681,9 +703,7 @@
                                        <span>Google Plus</span>
                                    </li>
                                    <li>
-                                       <div class="social-icons" style="background: #FF0000; border-radius: 20%; height: 26px;">
-                                           <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                       </div>
+                                       <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                                        <span>Youtube</span>
                                    </li>
                                    <li>
@@ -724,10 +744,9 @@
        </div>
    </footer>
 
-   <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
-   <!--<script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>-->
-   <!--<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>-->
-   <!--<script src="js/init.js"></script>-->
+   <script src="js/jquery.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/main.js"></script>
 
 </body>
 
