--- a/review-post-1.html
+++ b/review-post-1.html
@@ -31,8 +31,8 @@
                            <div class="social-icons">
                                <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
                            </div>
-                           <div class="social-icons" style="background: #444444; border-radius: 20%; height: 26px;">
-                               <i class="fa fa-youtube-play fa-2x" style="color: white; padding: 0px 3px;" aria-hidden="true"></i>
+                           <div class="social-icons">
+                               <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                            </div>
                            <div class="social-icons">
                                <i class="fa fa-rss-square fa-2x" aria-hidden="true"></i>
@@ -46,7 +46,7 @@
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 col-md-12 col-lg-12">
-                       <div class="header-block">
+                       <div class="header-block" style="position: relative">
                            <div class="logo">
                                <img src="images/iic-logo-5000x1574.png" width="100px">
                            </div>
@@ -76,7 +76,7 @@
                                    </div>
                                </nav>
                                <nav class="mobile-menu">
-                                   <button class="humburger-mobile"><i class="fa fa-bars fa-1x"></i></button>
+                                   <button class="humburger-mobile"><i class="fa fa-bars fa-2x"></i></button>
                                    <div class="navbar-collapse mobile" style="display: none;">
                                        <ul class="navbar-nav mr-auto">
                                            <li class="nav-item active">
@@ -1288,9 +1288,7 @@
                                        <span>Google Plus</span>
                                    </li>
                                    <li>
-                                       <div class="social-icons" style="background: #FF0000; border-radius: 20%; height: 26px;">
-                                           <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                       </div>
+                                       <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                                        <span>Youtube</span>
                                    </li>
                                    <li>
