--- a/reviews.html
+++ b/reviews.html
@@ -31,8 +31,8 @@
                            <div class="social-icons">
                                <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
                            </div>
-                           <div class="social-icons" style="background: #444444; border-radius: 20%; height: 26px;">
-                               <i class="fa fa-youtube-play fa-2x" style="color: white; padding: 0px 3px;" aria-hidden="true"></i>
+                           <div class="social-icons">
+                               <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                            </div>
                            <div class="social-icons">
                                <i class="fa fa-rss-square fa-2x" aria-hidden="true"></i>
@@ -42,20 +42,42 @@
                </div>
            </div>
        </div>
-       <div class="header">
+       <div class="header" style="position: relative">
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 col-md-12 col-lg-12">
-                       <div class="header-block">
+                       <div class="header-block" style="position: relative">
                            <div class="logo">
                                <img src="images/iic-logo-5000x1574.png" width="100px">
                            </div>
                            <div>
                                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                                   <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-                                       <!--<span class="navbar-toggler-icon"></span>-->
-                                   <!--</button>-->
                                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                       <ul class="navbar-nav mr-auto">
+                                           <li class="nav-item active">
+                                               <a class="nav-link" href="#">CATEGORIES</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">DEALS</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">AMAZON DEALS</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">SHOP APPLE.CA</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">SEARCH</a>
+                                           </li>
+                                           <li class="nav-item">
+                                               <a class="nav-link" href="#">SUBMIT TIPS</a>
+                                           </li>
+                                       </ul>
+                                   </div>
+                               </nav>
+                               <nav class="mobile-menu">
+                                   <button class="humburger-mobile"><i class="fa fa-bars fa-2x"></i></button>
+                                   <div class="navbar-collapse mobile" style="display: none;">
                                        <ul class="navbar-nav mr-auto">
                                            <li class="nav-item active">
                                                <a class="nav-link" href="#">CATEGORIES</a>
@@ -88,7 +110,7 @@
 
    <div class="col-sm-12 col-md-12 col-lg-12 main-block">
        <div class="container">
-           <div class="col-sm-12 col-md-6 col-lg-8 top-news-block">
+           <div class="col-sm-12 col-md-8 col-lg-8 top-news-block">
                <div class="top-news">
                    <h2>Reviews</h2>
                </div>
@@ -404,7 +426,7 @@
                    <button>LOAD MORE</button>
                </div>
            </div>
-           <div class="col-sm-12 col-md-6 col-lg-4 most-viewed" style="margin-top: 0">
+           <div class="col-sm-12 col-md-4 col-lg-4 most-viewed" style="margin-top: 0">
                <div class="most-viewed-title">
                    <h2>Most Viewed</h2>
                </div>
@@ -523,7 +545,7 @@
                    </div>
                </div>
            </div>
-           <div class="col-sm-12 col-md-6 col-lg-4 most-viewed" style="margin-top: 0">
+           <div class="col-sm-12 col-md-4 col-lg-4 most-viewed" style="margin-top: 0">
                <div class="most-viewed-title">
                    <h2>More Posts</h2>
                </div>
@@ -631,9 +653,7 @@
                                        <span>Google Plus</span>
                                    </li>
                                    <li>
-                                       <div class="social-icons" style="background: #FF0000; border-radius: 20%; height: 26px;">
-                                           <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                       </div>
+                                       <i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i>
                                        <span>Youtube</span>
                                    </li>
                                    <li>
@@ -673,6 +693,10 @@
            </div>
        </div>
    </footer>
+
+   <script src="js/jquery.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/main.js"></script>
 
 </body>
 
