--- a/contact-us.html
+++ b/contact-us.html
@@ -138,6 +138,28 @@
                 </div>
             </div>
         </div>
+        <div class="contact-form">
+            <h4>Have a tip or news to share? Use our contact form below!</h4>
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="contact-form-block col-sm-12 col-md-8 col-lg-6 col-lg-offset-3">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <label>Your Name</label>
+                        <input type="text" placeholder="First name, last name">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <label>Email</label>
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                        <label>Text</label>
+                        <textarea rows="4" placeholder="Your Text here"></textarea>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-2 col-lg-offset-5">
+                        <button>SEND</button>
+                    </div>
+                </div>
+            </div>
+        </div>
    </div>
 
    <!-- <footer>
