--- a/contact-us.html
+++ b/contact-us.html
@@ -141,7 +141,7 @@
         <div class="contact-form">
             <h4>Have a tip or news to share? Use our contact form below!</h4>
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <div class="contact-form-block col-sm-12 col-md-8 col-lg-6 col-lg-offset-3">
+                <div class="contact-form-block col-sm-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <label>Your Name</label>
                         <input type="text" placeholder="First name, last name">
